# hw8_testcontainers

./: .env  Dockerfile  Makefile  data_clean.json  data_fraud.json  detector.db  docker-compose.yaml  pyproject.toml  test_main.py
.github/workflows/: ci.yaml
app/: database.py  main.py  model_estimate.py  model_predict.py  models.py  schemas.py
test/: test_db.py
