[tool.poetry]
name = "fraud detector"
version = "2.5.2"
description = ""
authors = ["Arinka"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.3"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
scikit-learn = "^1.3.2"
sqlalchemy = "^2.0.23"
numpy = "^1.26.2"
pytest = "^7.4.3"
httpx = "^0.25.2"
testcontainers = {extras = ["postgres"], version = "^3.7.1"}
postgres = "^4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
